[gd_scene load_steps=17 format=3 uid="uid://da375min1u6w5"]

[ext_resource type="Script" uid="uid://tedxtq4b2g31" path="res://scripts/data_editor.gd" id="1_o8t3j"]
[ext_resource type="Texture2D" uid="uid://cqoqid4x5nmkw" path="res://addons/windows_95_theme/plus.png" id="3_i70uo"]
[ext_resource type="Resource" uid="uid://dcww28fkwrhvp" path="res://resources/humans/sample_visuals.tres" id="3_txbwn"]
[ext_resource type="Texture2D" uid="uid://bor14ncoefmbi" path="res://addons/windows_95_theme/minus.png" id="4_i70uo"]
[ext_resource type="AudioStream" uid="uid://cg6s4w84pp8ck" path="res://sfx/Single Keys/keypress-001.wav" id="5_h0xvl"]
[ext_resource type="AudioStream" uid="uid://djxgc7h3veyb5" path="res://sfx/Single Keys/keypress-002.wav" id="6_dkc0l"]
[ext_resource type="AudioStream" uid="uid://bm4x0tdmar7g2" path="res://sfx/Single Keys/keypress-003.wav" id="7_dv2w0"]
[ext_resource type="AudioStream" uid="uid://c0i1m4s3r3qxp" path="res://sfx/Single Keys/keypress-004.wav" id="8_2ovvm"]
[ext_resource type="AudioStream" uid="uid://dw3d584joqb0v" path="res://sfx/Single Keys/keypress-005.wav" id="9_yqfgd"]
[ext_resource type="AudioStream" uid="uid://dnrt3vh8g3t50" path="res://sfx/Single Keys/keypress-006.wav" id="10_1oir7"]
[ext_resource type="AudioStream" uid="uid://c87s1r64qwftj" path="res://sfx/Single Keys/keypress-007.wav" id="11_xs84a"]
[ext_resource type="AudioStream" uid="uid://cxytqdn1pq1u6" path="res://sfx/Single Keys/keypress-008.wav" id="12_lqgrn"]
[ext_resource type="AudioStream" uid="uid://b66omqh3p7m6f" path="res://sfx/Single Keys/keypress-009.wav" id="13_6p045"]
[ext_resource type="AudioStream" uid="uid://by7eqpod7vs4" path="res://sfx/Single Keys/keypress-010.wav" id="14_xexw4"]
[ext_resource type="PackedScene" uid="uid://cnpe63hphlaph" path="res://scenes/focus_setter.tscn" id="15_dkc0l"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_40xgy"]
random_pitch = 1.1
random_volume_offset_db = 5.0
streams_count = 10
stream_0/stream = ExtResource("5_h0xvl")
stream_1/stream = ExtResource("6_dkc0l")
stream_2/stream = ExtResource("7_dv2w0")
stream_3/stream = ExtResource("8_2ovvm")
stream_4/stream = ExtResource("9_yqfgd")
stream_5/stream = ExtResource("10_1oir7")
stream_6/stream = ExtResource("11_xs84a")
stream_7/stream = ExtResource("12_lqgrn")
stream_8/stream = ExtResource("13_6p045")
stream_9/stream = ExtResource("14_xexw4")

[node name="DataEditor" type="Control" node_paths=PackedStringArray("tree", "save_dialog", "load_dialog", "save_button", "discard_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8t3j")
tree = NodePath("PanelContainer/VBoxContainer/Tree")
save_dialog = NodePath("SaveFileDialog")
load_dialog = NodePath("LoadFileDialog")
save_button = NodePath("PanelContainer/VBoxContainer/HBoxContainer/SaveButton")
discard_button = NodePath("PanelContainer/VBoxContainer/HBoxContainer/DiscardChangesButton")
human_visuals = ExtResource("3_txbwn")
add_empty_element = false
add_texture = ExtResource("3_i70uo")
remove_texture = ExtResource("4_i70uo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TopHBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NewDataButton" type="Button" parent="PanelContainer/VBoxContainer/TopHBoxContainer"]
layout_mode = 2
text = "New"

[node name="LoadButton" type="Button" parent="PanelContainer/VBoxContainer/TopHBoxContainer"]
layout_mode = 2
text = "Load"

[node name="LoadDefaultsButton" type="Button" parent="PanelContainer/VBoxContainer/TopHBoxContainer"]
layout_mode = 2
text = "Load defaults"

[node name="OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
item_count = 2
popup/item_0/text = "qwerfghj"
popup/item_0/id = 0
popup/item_1/text = "12345678"
popup/item_1/id = 1

[node name="Tree" type="Tree" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
hide_root = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Save"

[node name="SaveAsButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save as"

[node name="DiscardChangesButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Discard changes"

[node name="SaveFileDialog" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(960, 540)
access = 2
filters = PackedStringArray("*.tres")

[node name="LoadFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(960, 540)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.tres")

[node name="KeyboardAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_40xgy")
bus = &"SFX"

[node name="FocusSetter" parent="." node_paths=PackedStringArray("target_control") instance=ExtResource("15_dkc0l")]
target_control = NodePath("../PanelContainer/VBoxContainer/TopHBoxContainer/NewDataButton")

[connection signal="pressed" from="PanelContainer/VBoxContainer/TopHBoxContainer/NewDataButton" to="." method="_on_new_data_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TopHBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TopHBoxContainer/LoadDefaultsButton" to="." method="_on_load_defaults_button_pressed"]
[connection signal="button_clicked" from="PanelContainer/VBoxContainer/Tree" to="." method="_on_tree_button_clicked"]
[connection signal="item_edited" from="PanelContainer/VBoxContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/DiscardChangesButton" to="." method="_on_discard_changes_button_pressed"]
